# agent-click

./: test_display.rs
cli/crates/agent-click-cdp/src/: detect.rs
cli/crates/agent-click-core/src/: element.rs  platform.rs
cli/crates/agent-click-macos/: Cargo.toml
cli/crates/agent-click-macos/src/: input.rs  platform.rs
cli/crates/agent-click-windows/: Cargo.toml
cli/crates/agent-click-windows/src/: platform.rs
cli/src/: actions.rs  observe.rs  wait.rs
cli/src/cli/: handlers.rs
docs/src/app/: page.tsx
docs/superpowers/plans/: 2026-04-05-phase1-core-reliability-plan.md
docs/superpowers/specs/: 2026-04-05-phase1-core-reliability-design.md
